fixed main image overflowing on small screens or when zoomed in

--- a/react-frontend/src/App.css
+++ b/react-frontend/src/App.css
@@ -13,6 +13,8 @@ img {
   -moz-user-select: none;
   -webkit-user-select: none;
   -ms-user-select: none;
+  width: 100vw;
+  height: 100vh;
 }
 
 .menu {
